# projector

./: .gitignore  ARCHITECTURE.md  BODY_CRDT_DECISION.md  CHANGELOG.md  Cargo.toml  PRODUCT.md  README.md  SLICE1.md  STORAGE.md  V0.md  dist-workspace.toml
scripts/: tag-release.py  (+13 more)
src/cli/: Cargo.toml
src/cli/src/: browser_ui.rs  cli_support.rs  daemon_cli.rs  get_browser.rs  main.rs  restore_browser.rs  sync_entry_cli.rs
src/cli/src/connection_cli/: args.rs  deploy.rs  mod.rs  profiles.rs  prompts.rs
src/cli/src/diagnostics_cli/: compact.rs  mod.rs
src/cli/src/diagnostics_cli/history_restore/: args.rs  history.rs  mod.rs  purge_browser.rs  redact_browser.rs  render.rs  surgery.rs
src/cli/src/diagnostics_cli/history_restore/restore/: apply.rs  mod.rs  prepare.rs  selection.rs
src/cli/src/diagnostics_cli/observability/: conflicts.rs  mod.rs  status.rs
src/cli/src/diagnostics_cli/observability/doctor/: entries.rs  mod.rs  profiles.rs  report.rs
src/cli/src/diagnostics_cli/observability/log/: local.rs  mod.rs  remote.rs
src/cli/tests/: deploy_e2e.rs  local_bootstrap.rs  postgres_bootstrap.rs  release_pipeline.rs
src/runtime/: Cargo.toml
src/runtime/src/: binding_store.rs  daemon.rs  lease.rs  lib.rs  materializer.rs  provenance.rs  status.rs  sync_config_store.rs  sync_issue.rs  sync_targets.rs  test_support.rs  watcher.rs
src/runtime/src/daemon/: reconcile.rs  recovery.rs
src/runtime/src/daemon/reconcile/full_sync/: discovery.rs  local_text.rs  materialized_bodies.rs  materialized_paths.rs  mod.rs  moves.rs
src/runtime/src/daemon/reconcile/watch_sync/: mod.rs  moves.rs
src/runtime/src/global_state/: daemon_state.rs  mod.rs  projector_home.rs  server_profiles.rs  sync_registry.rs
src/runtime/src/machine_daemon/: loop_runner.rs  mod.rs  repo_runtimes.rs  scheduling.rs
src/runtime/src/transport/: http.rs  mod.rs
src/server/: Cargo.toml
src/server/migrations/: 0001_init.sql  0002_history.sql  0003_history_workspace_cursor.sql  0004_sync_entry_metadata.sql  0005_body_storage_kinds.sql  0006_body_history_checkpoint_anchors.sql  0007_history_compaction_policies.sql
src/server/src/: lib.rs  main.rs
src/server/src/http/: handlers.rs  mod.rs  runtime.rs
src/server/src/storage/: bodies.rs  body_persistence.rs  body_projection.rs  body_state.rs  contract.rs  error.rs  file_store.rs  history.rs  history_compaction.rs  history_file.rs  history_postgres.rs  history_restore.rs  history_surgery.rs  manifest.rs  manifest_file.rs  manifest_postgres.rs  mod.rs  postgres_store.rs  provenance.rs  provenance_file.rs  provenance_postgres.rs  provenance_synthetic.rs
src/server/src/storage/sqlite/: history.rs  history_events.rs  history_policy.rs  history_revisions.rs  history_surgery.rs  manifest.rs  mod.rs  state.rs  workspace.rs
src/server/src/storage/sqlite/restore/: mod.rs
src/server/src/storage/workspaces/: mod.rs
src/server/src/storage/workspaces/file/: bootstrap.rs  discovery.rs  mod.rs
src/server/tests/: postgres_internal_compaction.rs
(+78 files in other folders)
