[package]
name = "projector-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[package.metadata.dist]
dist = true

[[bin]]
name = "projector"
path = "src/main.rs"

[dependencies]
crossterm = "0.28"
libc = "0.2"
projector-domain = { path = "../domain" }
projector-runtime = { path = "../runtime" }
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }

[dev-dependencies]
portable-pty = "0.8"
projector-server = { path = "../server" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
