[package]
name = "projector-runtime"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "projector_runtime"
path = "src/lib.rs"

[dependencies]
libc = "0.2"
notify = "6.1"
projector-domain = { path = "../domain" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
