[package]
name = "projector-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[package.metadata.dist]
dist = true

[lib]
name = "projector_server"
path = "src/lib.rs"

[[bin]]
name = "projector-server"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
axum = "0.7"
projector-domain = { path = "../domain" }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync"] }
tokio-postgres = "0.7"
